<resources>
    <string name="app_name">DocPlant</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="title_login_page">Welcome to the DocPlant</string>
    <string name="title_signup_page">Please fill in your data</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="copyright">© 2022 DocPlant</string>
    <string name="message_login_page">Please login</string>
    <string name="have">Already have an account?</string>
    <string name="login">Login</string>
    <string name="dont">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <string name="title_home">Home</string>
    <string name="setting">Setting</string>
    <string name="scan">Scan</string>
    <string name="language_setting">Language Setting</string>
    <string name="logout">Logout</string>
    <string name="upload_pict">Upload picture for scan</string>
    <string name="select_image">Select image from</string>
    <string name="select_from_camera">Camera</string>
    <string name="select_from_gallery">Gallery</string>
    <string name="upload_img">Upload Image</string>
    <string name="login_success">Login Success</string>
    <string name="login_err">Wrong email or password!</string>
    <string name="register_success">Register success, please login!</string>
    <string name="logo">Logo</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="logout_message_success">Logged out successfully</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>