<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/Navigation_Home">
    <fragment
        android:id="@+id/Navigation_Home"
        android:name="com.dicoding.picodiploma.docplant.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/Navigation_Scan"
        android:name="com.dicoding.picodiploma.docplant.ui.scan.ScanFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scan" />
    <fragment
        android:id="@+id/Navigation_Setting"
        android:name="com.dicoding.picodiploma.docplant.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
</navigation>